green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-app
  labels:
    app: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: hashicorp/http-echo:latest
        args: ["-listen=:8081", "-text=\"I am green\""]
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  selector:
    app: green
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
