green-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-release
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/elb.port: '80'
    nginx.ingress.kubernetes.io/canary: "true"         
    nginx.ingress.kubernetes.io/canary-weight: "25"    
spec:
  rules:
    - host: www.example.com
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: green-service
                port:
                  number: 8081
